--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -29,6 +29,7 @@
             android:id="@+id/toolbarDt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:title="@{toolbarDetail}"
             android:background="?attr/colorPrimary"
             android:minHeight="?attr/actionBarSize"
             android:theme="?attr/actionBarTheme"
