--- a/app/src/main/res/layout/fragment_add_todo.xml
+++ b/app/src/main/res/layout/fragment_add_todo.xml
@@ -8,6 +8,9 @@
         <variable
             name="addTodoFragment"
             type="com.serosoft.todoapp.ui.add.AddTodoFragment" />
+        <variable
+            name="toolbarAddTodo"
+            type="String" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,6 +21,7 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbarAdd"
             android:layout_width="match_parent"
+            app:title="@{toolbarAddTodo}"
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
             android:minHeight="?attr/actionBarSize"
